start_sources()

# -- python.waf_files --
sources_platform(ALL)
add_sources("NoUberFile"
	SOURCE_GROUP "Configuration"
		"pyconfig.h"
		"CheckValidConfiguration.c"
		"${SDK_DIR}/Python27/PC/pyconfig.h"
	SOURCE_GROUP "Grammar"
		"${SDK_DIR}/Python27/Include/token.h"
		"${SDK_DIR}/Python27/Include/grammar.h"
		"${SDK_DIR}/Python27/Include/graminit.h"
		"${SDK_DIR}/Python27/Python/graminit.c"
	SOURCE_GROUP "IO"
		"${SDK_DIR}/Python27/Modules/_io/_iomodule.h"
		"${SDK_DIR}/Python27/Modules/_io/_iomodule.c"
		"${SDK_DIR}/Python27/Modules/_io/bufferedio.c"
		"${SDK_DIR}/Python27/Modules/_io/bytesio.c"
		"${SDK_DIR}/Python27/Modules/_io/fileio.c"
		"${SDK_DIR}/Python27/Modules/_io/iobase.c"
		"${SDK_DIR}/Python27/Modules/_io/stringio.c"
		"${SDK_DIR}/Python27/Modules/_io/textio.c"
	SOURCE_GROUP "Include"
		"${SDK_DIR}/Python27/Include/Python-ast.h"
		"${SDK_DIR}/Python27/Include/Python.h"
		"${SDK_DIR}/Python27/Include/abstract.h"
		"${SDK_DIR}/Python27/Include/asdl.h"
		"${SDK_DIR}/Python27/Include/ast.h"
		"${SDK_DIR}/Python27/Include/bitset.h"
		"${SDK_DIR}/Python27/Include/boolobject.h"
		"${SDK_DIR}/Python27/Include/bytearrayobject.h"
		"${SDK_DIR}/Python27/Include/bytes_methods.h"
		"${SDK_DIR}/Python27/Include/bytesobject.h"
		"${SDK_DIR}/Python27/Include/bufferobject.h"
		"${SDK_DIR}/Python27/Include/cellobject.h"
		"${SDK_DIR}/Python27/Include/ceval.h"
		"${SDK_DIR}/Python27/Include/classobject.h"
		"${SDK_DIR}/Python27/Include/cobject.h"
		"${SDK_DIR}/Python27/Include/code.h"
		"${SDK_DIR}/Python27/Include/codecs.h"
		"${SDK_DIR}/Python27/Include/compile.h"
		"${SDK_DIR}/Python27/Include/complexobject.h"
		"${SDK_DIR}/Python27/Include/descrobject.h"
		"${SDK_DIR}/Python27/Include/dictobject.h"
		"${SDK_DIR}/Python27/Include/dtoa.h"
		"${SDK_DIR}/Python27/Include/enumobject.h"
		"${SDK_DIR}/Python27/Include/errcode.h"
		"${SDK_DIR}/Python27/Include/eval.h"
		"${SDK_DIR}/Python27/Include/fileobject.h"
		"${SDK_DIR}/Python27/Include/floatobject.h"
		"${SDK_DIR}/Python27/Include/frameobject.h"
		"${SDK_DIR}/Python27/Include/funcobject.h"
		"${SDK_DIR}/Python27/Include/genobject.h"
		"${SDK_DIR}/Python27/Include/import.h"
		"${SDK_DIR}/Python27/Include/intobject.h"
		"${SDK_DIR}/Python27/Include/intrcheck.h"
		"${SDK_DIR}/Python27/Include/iterobject.h"
		"${SDK_DIR}/Python27/Include/listobject.h"
		"${SDK_DIR}/Python27/Include/longintrepr.h"
		"${SDK_DIR}/Python27/Include/longobject.h"
		"${SDK_DIR}/Python27/Include/marshal.h"
		"${SDK_DIR}/Python27/Include/memoryobject.h"
		"${SDK_DIR}/Python27/Include/metagrammar.h"
		"${SDK_DIR}/Python27/Include/methodobject.h"
		"${SDK_DIR}/Python27/Include/modsupport.h"
		"${SDK_DIR}/Python27/Include/moduleobject.h"
		"${SDK_DIR}/Python27/Include/node.h"
		"${SDK_DIR}/Python27/Include/object.h"
		"${SDK_DIR}/Python27/Include/objimpl.h"
		"${SDK_DIR}/Python27/Include/opcode.h"
		"${SDK_DIR}/Python27/Include/osdefs.h"
		"${SDK_DIR}/Python27/Include/parsetok.h"
		"${SDK_DIR}/Python27/Include/patchlevel.h"
		"${SDK_DIR}/Python27/Include/pgen.h"
		"${SDK_DIR}/Python27/Include/pgenheaders.h"
		"${SDK_DIR}/Python27/Include/pyarena.h"
		"${SDK_DIR}/Python27/Include/pycapsule.h"
		"${SDK_DIR}/Python27/Include/pyctype.h"
		"${SDK_DIR}/Python27/Include/pydebug.h"
		"${SDK_DIR}/Python27/Include/pyerrors.h"
		"${SDK_DIR}/Python27/Include/pyfpe.h"
		"${SDK_DIR}/Python27/Include/pymath.h"
		"${SDK_DIR}/Python27/Include/pygetopt.h"
		"${SDK_DIR}/Python27/Include/pymem.h"
		"${SDK_DIR}/Python27/Include/pyport.h"
		"${SDK_DIR}/Python27/Include/pystate.h"
		"${SDK_DIR}/Python27/Include/pystrcmp.h"
		"${SDK_DIR}/Python27/Include/pystrtod.h"
		"${SDK_DIR}/Python27/Include/pythonrun.h"
		"${SDK_DIR}/Python27/Include/pythread.h"
		"${SDK_DIR}/Python27/Include/rangeobject.h"
		"${SDK_DIR}/Python27/Include/setobject.h"
		"${SDK_DIR}/Python27/Include/sliceobject.h"
		"${SDK_DIR}/Python27/Include/stringobject.h"
		"${SDK_DIR}/Python27/Include/structmember.h"
		"${SDK_DIR}/Python27/Include/structseq.h"
		"${SDK_DIR}/Python27/Include/symtable.h"
		"${SDK_DIR}/Python27/Include/sysmodule.h"
		"${SDK_DIR}/Python27/Include/traceback.h"
		"${SDK_DIR}/Python27/Include/tupleobject.h"
		"${SDK_DIR}/Python27/Include/ucnhash.h"
		"${SDK_DIR}/Python27/Include/unicodeobject.h"
		"${SDK_DIR}/Python27/Include/warnings.h"
		"${SDK_DIR}/Python27/Include/weakrefobject.h"
	SOURCE_GROUP "Module"
		"${SDK_DIR}/Python27/Modules/_bisectmodule.c"
		"${SDK_DIR}/Python27/Modules/_codecsmodule.c"
		"${SDK_DIR}/Python27/Modules/_collectionsmodule.c"
		"${SDK_DIR}/Python27/Modules/_csv.c"
		"${SDK_DIR}/Python27/Modules/_elementtree.c"
		"${SDK_DIR}/Python27/Modules/_functoolsmodule.c"
		"${SDK_DIR}/Python27/Modules/_heapqmodule.c"
		"${SDK_DIR}/Python27/Modules/_hotshot.c"
		"${SDK_DIR}/Python27/Modules/_json.c"
		"${SDK_DIR}/Python27/Modules/_localemodule.c"
		"${SDK_DIR}/Python27/Modules/_lsprof.c"
		"${SDK_DIR}/Python27/Modules/_math.h"
		"${SDK_DIR}/Python27/Modules/_math.c"
		"${SDK_DIR}/Python27/Modules/_randommodule.c"
		"${SDK_DIR}/Python27/Modules/_sre.c"
		"${SDK_DIR}/Python27/Modules/_struct.c"
		"${SDK_DIR}/Python27/Modules/_weakref.c"
		"${SDK_DIR}/Python27/Modules/arraymodule.c"
		"${SDK_DIR}/Python27/Modules/audioop.c"
		"${SDK_DIR}/Python27/Modules/binascii.c"
		"${SDK_DIR}/Python27/Modules/cmathmodule.c"
		"${SDK_DIR}/Python27/Modules/cPickle.c"
		"${SDK_DIR}/Python27/Modules/cStringIO.c"
		"${SDK_DIR}/Python27/Modules/datetimemodule.c"
		"${SDK_DIR}/Python27/Modules/errnomodule.c"
		"${SDK_DIR}/Python27/Modules/future_builtins.c"
		"${SDK_DIR}/Python27/Modules/gcmodule.c"
		"${SDK_DIR}/Python27/Modules/getbuildinfo.c"
		"${SDK_DIR}/Python27/Modules/imageop.c"
		"${SDK_DIR}/Python27/Modules/itertoolsmodule.c"
		"${SDK_DIR}/Python27/Modules/main.c"
		"${SDK_DIR}/Python27/Modules/mathmodule.c"
		"${SDK_DIR}/Python27/Modules/md5.h"
		"${SDK_DIR}/Python27/Modules/md5.c"
		"${SDK_DIR}/Python27/Modules/md5module.c"
		"${SDK_DIR}/Python27/Modules/mmapmodule.c"
		"${SDK_DIR}/Python27/Modules/operator.c"
		"${SDK_DIR}/Python27/Modules/parsermodule.c"
		"${SDK_DIR}/Python27/Modules/posixmodule.c"
		"${SDK_DIR}/Python27/Modules/pyexpat.c"
		"${SDK_DIR}/Python27/Modules/rotatingtree.h"
		"${SDK_DIR}/Python27/Modules/rotatingtree.c"
		"${SDK_DIR}/Python27/Modules/sha256module.c"
		"${SDK_DIR}/Python27/Modules/sha512module.c"
		"${SDK_DIR}/Python27/Modules/shamodule.c"
		"${SDK_DIR}/Python27/Modules/signalmodule.c"
		"${SDK_DIR}/Python27/Modules/sre.h"
		"${SDK_DIR}/Python27/Modules/sre_constants.h"
		"${SDK_DIR}/Python27/Modules/stropmodule.c"
		"${SDK_DIR}/Python27/Modules/symtablemodule.c"
		"${SDK_DIR}/Python27/Modules/threadmodule.c"
		"${SDK_DIR}/Python27/Modules/timemodule.c"
		"${SDK_DIR}/Python27/Modules/unicodedata.c"
		"${SDK_DIR}/Python27/Modules/unicodedata_db.h"
		"${SDK_DIR}/Python27/Modules/unicodename_db.h"
		"${SDK_DIR}/Python27/Modules/xxmodule.c"
		"${SDK_DIR}/Python27/Modules/xxsubtype.c"
		"${SDK_DIR}/Python27/Modules/yuv.h"
		"${SDK_DIR}/Python27/Modules/yuvconvert.c"
		"${SDK_DIR}/Python27/Modules/zipimport.c"
		"${SDK_DIR}/Python27/Modules/zlibmodule.c"
	SOURCE_GROUP "Object"
		"${SDK_DIR}/Python27/Objects/abstract.c"
		"${SDK_DIR}/Python27/Objects/boolobject.c"
		"${SDK_DIR}/Python27/Objects/bufferobject.c"
		"${SDK_DIR}/Python27/Objects/bytes_methods.c"
		"${SDK_DIR}/Python27/Objects/bytearrayobject.c"
		"${SDK_DIR}/Python27/Objects/capsule.c"
		"${SDK_DIR}/Python27/Objects/cellobject.c"
		"${SDK_DIR}/Python27/Objects/classobject.c"
		"${SDK_DIR}/Python27/Objects/cobject.c"
		"${SDK_DIR}/Python27/Objects/codeobject.c"
		"${SDK_DIR}/Python27/Objects/complexobject.c"
		"${SDK_DIR}/Python27/Objects/descrobject.c"
		"${SDK_DIR}/Python27/Objects/enumobject.c"
		"${SDK_DIR}/Python27/Objects/exceptions.c"
		"${SDK_DIR}/Python27/Objects/genobject.c"
		"${SDK_DIR}/Python27/Objects/fileobject.c"
		"${SDK_DIR}/Python27/Objects/floatobject.c"
		"${SDK_DIR}/Python27/Objects/frameobject.c"
		"${SDK_DIR}/Python27/Objects/funcobject.c"
		"${SDK_DIR}/Python27/Objects/intobject.c"
		"${SDK_DIR}/Python27/Objects/iterobject.c"
		"${SDK_DIR}/Python27/Objects/listobject.c"
		"${SDK_DIR}/Python27/Objects/longobject.c"
		"${SDK_DIR}/Python27/Objects/dictobject.c"
		"${SDK_DIR}/Python27/Objects/memoryobject.c"
		"${SDK_DIR}/Python27/Objects/methodobject.c"
		"${SDK_DIR}/Python27/Objects/moduleobject.c"
		"${SDK_DIR}/Python27/Objects/object.c"
		"${SDK_DIR}/Python27/Objects/obmalloc.c"
		"${SDK_DIR}/Python27/Objects/rangeobject.c"
		"${SDK_DIR}/Python27/Objects/setobject.c"
		"${SDK_DIR}/Python27/Objects/sliceobject.c"
		"${SDK_DIR}/Python27/Objects/stringobject.c"
		"${SDK_DIR}/Python27/Objects/structseq.c"
		"${SDK_DIR}/Python27/Objects/tupleobject.c"
		"${SDK_DIR}/Python27/Objects/typeobject.c"
		"${SDK_DIR}/Python27/Objects/weakrefobject.c"
	SOURCE_GROUP "PC"
		"${SDK_DIR}/Python27/PC/_subprocess.c"
		"${SDK_DIR}/Python27/PC/_winreg.c"
		"${SDK_DIR}/Python27/PC/dl_nt.c"
		"${SDK_DIR}/Python27/PC/import_nt.c"
		"${SDK_DIR}/Python27/PC/msvcrtmodule.c"
		"${SDK_DIR}/Python27/PC/errmap.h"
		"${SDK_DIR}/Python27/PC/getpathp.c"
		"${SDK_DIR}/Python27/PC/config.c"
	SOURCE_GROUP "Parser"
		"${SDK_DIR}/Python27/Parser/acceler.c"
		"${SDK_DIR}/Python27/Parser/grammar1.c"
		"${SDK_DIR}/Python27/Parser/listnode.c"
		"${SDK_DIR}/Python27/Parser/node.c"
		"${SDK_DIR}/Python27/Parser/parser.c"
		"${SDK_DIR}/Python27/Parser/parsetok.c"
		"${SDK_DIR}/Python27/Parser/bitset.c"
		"${SDK_DIR}/Python27/Parser/metagrammar.c"
		"${SDK_DIR}/Python27/Parser/firstsets.c"
		"${SDK_DIR}/Python27/Parser/grammar.c"
		"${SDK_DIR}/Python27/Parser/pgen.c"
		"${SDK_DIR}/Python27/Parser/myreadline.c"
		"${SDK_DIR}/Python27/Parser/tokenizer.c"
	SOURCE_GROUP "Python"
		"${SDK_DIR}/Python27/Python/_warnings.c"
		"${SDK_DIR}/Python27/Python/Python-ast.c"
		"${SDK_DIR}/Python27/Python/asdl.c"
		"${SDK_DIR}/Python27/Python/ast.c"
		"${SDK_DIR}/Python27/Python/bltinmodule.c"
		"${SDK_DIR}/Python27/Python/ceval.c"
		"${SDK_DIR}/Python27/Python/compile.c"
		"${SDK_DIR}/Python27/Python/codecs.c"
		"${SDK_DIR}/Python27/Python/errors.c"
		"${SDK_DIR}/Python27/Python/formatter_string.c"
		"${SDK_DIR}/Python27/Python/formatter_unicode.c"
		"${SDK_DIR}/Python27/Python/frozen.c"
		"${SDK_DIR}/Python27/Python/future.c"
		"${SDK_DIR}/Python27/Python/getargs.c"
		"${SDK_DIR}/Python27/Python/getcompiler.c"
		"${SDK_DIR}/Python27/Python/getcopyright.c"
		"${SDK_DIR}/Python27/Python/getplatform.c"
		"${SDK_DIR}/Python27/Python/getversion.c"
		"${SDK_DIR}/Python27/Python/import.c"
		"${SDK_DIR}/Python27/Python/importdl.c"
		"${SDK_DIR}/Python27/Python/marshal.c"
		"${SDK_DIR}/Python27/Python/modsupport.c"
		"${SDK_DIR}/Python27/Python/mystrtoul.c"
		"${SDK_DIR}/Python27/Python/mysnprintf.c"
		"${SDK_DIR}/Python27/Python/peephole.c"
		"${SDK_DIR}/Python27/Python/pyarena.c"
		"${SDK_DIR}/Python27/Python/pyctype.c"
		"${SDK_DIR}/Python27/Python/pyfpe.c"
		"${SDK_DIR}/Python27/Python/pymath.c"
		"${SDK_DIR}/Python27/Python/pystate.c"
		"${SDK_DIR}/Python27/Python/pythonrun.c"
		"${SDK_DIR}/Python27/Python/random.c"
		"${SDK_DIR}/Python27/Python/structmember.c"
		"${SDK_DIR}/Python27/Python/symtable.c"
		"${SDK_DIR}/Python27/Python/sysmodule.c"
		"${SDK_DIR}/Python27/Python/traceback.c"
		"${SDK_DIR}/Python27/Python/getopt.c"
		"${SDK_DIR}/Python27/Python/pystrcmp.c"
		"${SDK_DIR}/Python27/Python/pystrtod.c"
		"${SDK_DIR}/Python27/Python/dtoa.c"
		"${SDK_DIR}/Python27/Python/dynload_win.c"
		"${SDK_DIR}/Python27/Python/thread.c"
	SOURCE_GROUP "Resources"
		"pythonnt_rc.h"
		"pythonnt_rc_d.h"
		"${SDK_DIR}/Python27/PC/python_nt.rc"
	SOURCE_GROUP "String"
		"${SDK_DIR}/Python27/Objects/stringlib/count.h"
		"${SDK_DIR}/Python27/Objects/stringlib/ctype.h"
		"${SDK_DIR}/Python27/Objects/stringlib/fastsearch.h"
		"${SDK_DIR}/Python27/Objects/stringlib/find.h"
		"${SDK_DIR}/Python27/Objects/stringlib/formatter.h"
		"${SDK_DIR}/Python27/Objects/stringlib/partition.h"
		"${SDK_DIR}/Python27/Objects/stringlib/split.h"
		"${SDK_DIR}/Python27/Objects/stringlib/stringdefs.h"
		"${SDK_DIR}/Python27/Objects/stringlib/string_format.h"
		"${SDK_DIR}/Python27/Objects/stringlib/transmogrify.h"
		"${SDK_DIR}/Python27/Objects/stringlib/localeutil.h"
	SOURCE_GROUP "Unicode"
		"${SDK_DIR}/Python27/Objects/stringlib/unicodedefs.h"
		"${SDK_DIR}/Python27/Objects/unicodetype_db.h"
		"${SDK_DIR}/Python27/Objects/unicodectype.c"
		"${SDK_DIR}/Python27/Objects/unicodeobject.c"
		"${SDK_DIR}/Python27/Modules/cjkcodecs/_codecs_cn.c"
		"${SDK_DIR}/Python27/Modules/cjkcodecs/_codecs_hk.c"
		"${SDK_DIR}/Python27/Modules/cjkcodecs/_codecs_iso2022.c"
		"${SDK_DIR}/Python27/Modules/cjkcodecs/_codecs_jp.c"
		"${SDK_DIR}/Python27/Modules/cjkcodecs/_codecs_kr.c"
		"${SDK_DIR}/Python27/Modules/cjkcodecs/_codecs_tw.c"
		"${SDK_DIR}/Python27/Modules/cjkcodecs/alg_jisx0201.h"
		"${SDK_DIR}/Python27/Modules/cjkcodecs/cjkcodecs.h"
		"${SDK_DIR}/Python27/Modules/cjkcodecs/emu_jisx0213_2000.h"
		"${SDK_DIR}/Python27/Modules/cjkcodecs/mappings_cn.h"
		"${SDK_DIR}/Python27/Modules/cjkcodecs/mappings_hk.h"
		"${SDK_DIR}/Python27/Modules/cjkcodecs/mappings_jisx0213_pair.h"
		"${SDK_DIR}/Python27/Modules/cjkcodecs/mappings_jp.h"
		"${SDK_DIR}/Python27/Modules/cjkcodecs/mappings_kr.h"
		"${SDK_DIR}/Python27/Modules/cjkcodecs/mappings_tw.h"
		"${SDK_DIR}/Python27/Modules/cjkcodecs/multibytecodec.h"
		"${SDK_DIR}/Python27/Modules/cjkcodecs/multibytecodec.c"
)
end_sources()

if(WINDOWS)
	CreateDynamicModule(python27 SOLUTION_FOLDER "Libs")
	set_target_properties(python27 PROPERTIES DEBUG_POSTFIX "_d")
	target_compile_options(${THIS_PROJECT} PRIVATE /W0 "/FI${CRY_LIBS_DIR}/python/pyconfig.h")
	target_include_directories(${THIS_PROJECT} PUBLIC "${SDK_DIR}/Python27/Include")
	target_include_directories(${THIS_PROJECT} INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}")
	target_include_directories(${THIS_PROJECT} PRIVATE "${SDK_DIR}/Python27/PC" "${SDK_DIR}/Python27/Python")
	target_compile_definitions(${THIS_PROJECT} PRIVATE -DPy_BUILD_CORE -DWIN32 $<$<CONFIG:Debug>:_DEBUG>)
	target_compile_definitions(${THIS_PROJECT} INTERFACE -DHAVE_ROUND)
	target_link_libraries(${THIS_PROJECT} PRIVATE expat zlib shell32)
else()
	CryFileContainer(python27 SOLUTION_FOLDER "Libs")
endif()


start_sources()
sources_platform(ALL)
add_sources("NoUberFile"
	SOURCE_GROUP "Root"
	"python.c"
)
end_sources()

if(WINDOWS)
	CryConsoleApplication(sandboxpython SOLUTION_FOLDER "Libs")
	target_compile_definitions(${THIS_PROJECT} PRIVATE -DPy_BUILD_CORE -DWIN32 $<$<CONFIG:Debug>:_DEBUG>)
	target_link_libraries(${THIS_PROJECT} PRIVATE python27 Shlwapi)
else()
	CryFileContainer(sandboxpython SOLUTION_FOLDER "Libs")
endif()


